--- a/views/home.ejs
+++ b/views/home.ejs
@@ -103,7 +103,7 @@
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                 <h4 class="modal-title" id="myModalLabel">Add user to dashboard</h4>
             </div>
-            <div class="modal-body">
+            <div class="modal-body" style="background-color: #28697d;">
                 <ul id="loadUserToDashboard" class="list-group"></ul>
                 <br>
                 <div class="input-group input-group-lg">
@@ -112,8 +112,8 @@
                 </div>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btnM" data-dismiss="modal">Cancel</button>
-                <button type="button" class="btnM" id="btnAddUserToDashboard">Add User</button>
+                <button type="button" class="btnM" style="height: 30px;" data-dismiss="modal">Cancel</button>
+                <button type="button" class="btnM" style="height: 30px;" id="btnAddUserToDashboard">Add User</button>
             </div>
         </div>
     </div>
@@ -127,14 +127,14 @@
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                 <h4 class="modal-title" id="myModalLabel">Add dashboard</h4>
             </div>
-            <div class="modal-body">
+            <div class="modal-body" style="background-color: #28697d; color: #ffffff">
                 <div class="input-group input-group-lg">
                     <input id="inputDashboardName" type="text" class="form-control" placeholder="Dashboard Name" aria-describedby="sizing-addon1">
                 </div>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btnM" data-dismiss="modal">Cancel</button>
-                <button type="button" class="btnM" id="btnAddDashboard">Add Dashboard</button>
+                <button type="button" class="btnM" style="height: 30px;" data-dismiss="modal">Cancel</button>
+                <button type="button" class="btnM" style="height: 30px;" id="btnAddDashboard">Add Dashboard</button>
             </div>
         </div>
     </div>
@@ -148,7 +148,7 @@
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                 <h4 class="modal-title" id="myModalLabel">Add Panel</h4>
             </div>
-            <div class="modal-body">
+            <div class="modal-body" style="background-color: #28697d; color: #ffffff">
                 <div class="form-group">
                     <input id="inputPanelTitle" type="text" class="form-control" placeholder="Panel Title" aria-describedby="sizing-addon1">
                 </div>
@@ -158,15 +158,15 @@
                 <div class="form-group">
                     <input id="inputPanelLink" type="text" class="form-control" placeholder="URL" aria-describedby="sizing-addon1">
                 </div>
-                <div class="form-group img">
-                    <div id="setIcon"></div>
-                </div>
                 <form id="uploadFileForm" enctype="multipart/form-data" action="/upload" method="post">
                     <div class="form-group">
                         <input id="inputPanelFile" name="userFile" type="file" class="form-control">
                     </div>
                 </form>
-                <div class="form-group img" id="setImages">
+                <div class="form-group img">
+                    <div id="setIcon"></div>
+                </div>
+                <div class="form-group img" id="setImages" style="border: 1px; border-color: #ffffff;">
                     <!--Content Load Dynamik-->
                 </div>
                 <div id="progressAddPanel" class="progress">
@@ -176,8 +176,8 @@
                 </div>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btnM" data-dismiss="modal">Cancel</button>
-                <button type="button" class="btnM" id="btnAddPanel">Add Panel</button>
+                <button type="button" class="btnM" style="height: 30px;" data-dismiss="modal">Cancel</button>
+                <button type="button" class="btnM" style="height: 30px;" id="btnAddPanel">Add Panel</button>
             </div>
         </div>
     </div>
@@ -191,7 +191,7 @@
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                 <h4 class="modal-title" id="myModalLabel">Edit Panel</h4>
             </div>
-            <div class="modal-body">
+            <div class="modal-body" style="background-color: #28697d; color: #ffffff">
                     <div class="form-group">
                         <input id="editPanelTitle" type="text" class="form-control" placeholder="Panel Title" aria-describedby="sizing-addon1">
                     </div>
@@ -209,8 +209,8 @@
                     </div>
                 </div>
             <div class="modal-footer">
-                <button type="button" class="btnM" data-dismiss="modal">Cancel</button>
-                <button type="button" class="btnM" id="btnEditPanel">Save</button>
+                <button type="button" class="btnM" style="height: 30px;" data-dismiss="modal">Cancel</button>
+                <button type="button" class="btnM" style="height: 30px;" id="btnEditPanel">Save</button>
             </div>
         </div>
     </div>
@@ -223,7 +223,7 @@
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                 <h4 class="modal-title" id="viewPanelLabel"></h4>
             </div>
-            <div class="modal-body">
+            <div class="modal-body" style="background-color: #28697d; color: #ffffff">
                 <div class="form-group">
                     <textarea id="viewPanelDescription" readonly style="cursor: text" rows="10" class="form-control" placeholder="Panel Description" aria-describedby="sizing-addon1"></textarea>
                 </div>
@@ -235,10 +235,10 @@
                 </div>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btnM" id="btnDeletePanel">
+                <button type="button" class="btnM" style="height: 30px;" id="btnDeletePanel">
                     <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
                 </button>
-                <button type="button" class="btnM" id="btnEditPanel" onclick="editPanel(globalPanelId)">
+                <button type="button" class="btnM" style="height: 30px;" id="btnEditPanel" onclick="editPanel(globalPanelId)">
                     <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
                 </button>
             </div>
